// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`mutations.addUsersInGroupInput wants to add a user in group as admin 1`] = `
Object {
  "addUsersInGroup": Object {
    "group": Object {
      "id": "R3JvdXA6Z3JvdXAy",
      "users": Object {
        "edges": Array [
          Object {
            "node": Object {
              "id": "VXNlcjp1c2VyMTAx",
            },
          },
          Object {
            "node": Object {
              "id": "VXNlcjp1c2VyNTIw",
            },
          },
          Object {
            "node": Object {
              "id": "VXNlcjp1c2VyMQ==",
            },
          },
          Object {
            "node": Object {
              "id": "VXNlcjp1c2VyNTAz",
            },
          },
        ],
      },
    },
  },
}
`;

exports[`mutations.addUsersInGroupInput wants to add multiple users in group as admin 1`] = `
Object {
  "addUsersInGroup": Object {
    "group": Object {
      "id": "R3JvdXA6Z3JvdXAy",
      "users": Object {
        "edges": Array [
          Object {
            "node": Object {
              "id": "VXNlcjp1c2VyMTAx",
            },
          },
          Object {
            "node": Object {
              "id": "VXNlcjp1c2VyMTA3",
            },
          },
          Object {
            "node": Object {
              "id": "VXNlcjp1c2VyNTIw",
            },
          },
          Object {
            "node": Object {
              "id": "VXNlcjp1c2VyMQ==",
            },
          },
          Object {
            "node": Object {
              "id": "VXNlcjp1c2VyNTAz",
            },
          },
        ],
      },
    },
  },
}
`;
